feat: create token schema; apns development mode for dev
