# apis/token/schema.go
@@ -1,0 +1,8 @@
+package token
+
+type CreateTokenRequest struct {
+	DeviceID    string `json:"device_id" validate:"max=64"`
+	Service     string `json:"service" validate:"required,oneof=apns fcm mipush"`
+	Token       string `json:"token" validate:"max=64"`
+	PackageName string `json:"package_name"`
+}
