# docs/swagger.json
@@ -98,6 +98,34 @@
                     }
                 }
             },
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Add Token of a User",
+                "parameters": [
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/token.CreateTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PushToken"
+                        }
+                    }
+                }
+            },
             "post": {
                 "produces": [
                     "application/json"
@@ -113,7 +141,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.PushToken"
+                            "$ref": "#/definitions/token.CreateTokenRequest"
                         }
                     }
                 ],
@@ -216,23 +244,11 @@
                 }
             }
         },
-        "models.PushService": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "ServiceAPNS",
-                "ServiceFCM",
-                "ServiceMipush"
-            ]
-        },
         "models.PushToken": {
             "type": "object",
             "required": [
                 "device_id",
+                "service",
                 "token"
             ],
             "properties": {
@@ -247,7 +263,12 @@
                     "type": "string"
                 },
                 "service": {
-                    "$ref": "#/definitions/models.PushService"
+                    "type": "string",
+                    "enum": [
+                        "apns",
+                        "fcm",
+                        "mipush"
+                    ]
                 },
                 "token": {
                     "type": "string",
@@ -259,6 +280,33 @@
                 "user_id": {
                     "description": "not required",
                     "type": "integer"
+                }
+            }
+        },
+        "token.CreateTokenRequest": {
+            "type": "object",
+            "required": [
+                "service"
+            ],
+            "properties": {
+                "device_id": {
+                    "type": "string",
+                    "maxLength": 64
+                },
+                "package_name": {
+                    "type": "string"
+                },
+                "service": {
+                    "type": "string",
+                    "enum": [
+                        "apns",
+                        "fcm",
+                        "mipush"
+                    ]
+                },
+                "token": {
+                    "type": "string",
+                    "maxLength": 64
                 }
             }
         },
