# models/token.go
@@ -8,7 +8,7 @@ import (
 
 type PushToken struct {
 	UserID      int         `json:"user_id" gorm:"primaryKey;not null"` // not required
-	Service     PushService `json:"service" gorm:"not null"`
+	Service     PushService `json:"service" gorm:"not null" swaggertype:"string" validate:"required,oneof=apns fcm mipush"`
 	DeviceID    string      `json:"device_id" gorm:"uniqueIndex:,length:10;not null;size:64" validate:"required,max=64"`
 	Token       string      `json:"token" gorm:"primaryKey;not null;size:64;index:,length:10" validate:"required,max=64"`
 	PackageName string      `json:"package_name"`
@@ -56,4 +56,17 @@ func (s *PushService) UnmarshalText(text []byte) error {
 		return errors.New("unknown push service")
 	}
 	return nil
+}
+
+func NewPushService(s string) PushService {
+	switch strings.ToLower(s) {
+	case "apns":
+		return ServiceAPNS
+	case "fcm":
+		return ServiceFCM
+	case "mipush":
+		return ServiceMipush
+	default:
+		return ServiceUnknown
+	}
 }
